tests/baselines/reference/wrappedAndRecursiveConstraints3.errors.txt
tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints3.ts(14,28): error TS2345: Argument of type '{ length: 3; charAt: (x: number) => void; }' is not assignable to parameter of type '{ length: 2; }'.
  Object literal may only specify known properties, and 'charAt' does not exist in type '{ length: 2; }'.


==== tests/cases/conformance/types/typeParameters/typeArgumentLists/wrappedAndRecursiveConstraints3.ts (1 errors) ====
    // no errors expected
    
    class C<T extends { length: number }> {
        constructor(x: T) { }
        foo<U extends T>(x: U) {
            function bar<V extends U>(x: V) {
                return x;
            }
            return bar;
        }
    }
    
    var c = new C({ length: 2 });
    var r = c.foo({ length: 3, charAt: (x: number) => { '' } });
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ length: 3; charAt: (x: number) => void; }' is not assignable to parameter of type '{ length: 2; }'.
!!! error TS2345:   Object literal may only specify known properties, and 'charAt' does not exist in type '{ length: 2; }'.
    var r2 = r('');